# ibkr_trading_harness

./: .gitignore  CHANGELOG.md  LICENSE  README.md  core.py  eslint.config.mjs  package-lock.json  package.json  pyproject.toml  requirements.txt  setup.cfg
config/: cloud_status.example.yaml  cloud_status_hosted.example.yaml  crypto_paper.example.yaml  crypto_universe_example.yaml  example_universe.yaml  ibgateway_paper.env.example  opening_range_breakout.example.yaml  plugin_registry.example.yaml  plugin_runner.example.yaml  plugin_supervisor.example.yaml  remote_control.example.yaml  rsi_mean_reversion.example.yaml  sma_crossover.example.yaml  stock_paper.example.yaml  strategy_registry.example.yaml
docs/: blog_public_ibkr_harness_draft.md  cloud_monitoring_deployment.md  configuration_privacy.md  crypto_history_fetching.md  failed_order_diagnosis_runbook.md  ibkr_account_setup.md  ibkr_gateway_runbook.md  market_data_permissions_runbook.md  paper_trading_runbook.md  public_copy_manifest.md  public_framework_roadmap.md  public_launch_plan.md  public_quickstart.md  publication_readiness.md  service_restart_runbook.md  ui_use_cases.md  web_ui_runbook.md  work_queue.md  workbench_backtest_walkthrough.md  writeup.md
examples/: __init__.py
framework/: __init__.py  crypto_signal_plugin.py  intraday_bars.py  market_calendar.py  plugin_loader.py  stock_signal_plugin.py  strategy_plugin.py
live/: __init__.py  broker_adapters.py  fetch_crypto_history.py  fetch_history.py  fetch_manifest.py  ibkr_broker.py  ibkr_data.py  plugin_runner.py
scripts/: approve_order_preview.py  (+26 more)
(+79 files in other folders)
