[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ibkr-trading-harness"
version = "0.1.0"
description = "Local-first IBKR market data harness, strategy-plugin runner, and monitoring dashboard"
requires-python = ">=3.10"
license = { text = "MIT" }
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = { file = "requirements.txt" }

[tool.setuptools]
packages = ["framework", "examples", "examples.strategies"]
