# Fallback metadata for older setuptools that does not read [project] in
# pyproject.toml (PEP 621). Keep in sync with pyproject.toml.
[metadata]
name = ibkr-trading-harness
version = 0.1.0
description = Local-first IBKR market data harness, strategy-plugin runner, and monitoring dashboard
license = MIT

[options]
packages = framework, examples, examples.strategies
python_requires = >=3.10
